fix：修复原网页跳转功能

--- a/flask-m3u8-manager/templates/index.html
+++ b/flask-m3u8-manager/templates/index.html
@@ -160,15 +160,7 @@
     </div>
 
     <!-- 播放模态框 -->
-    <div id="playModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h3>视频播放</h3>
-            <video id="playVideo" controls style="width: 100%; max-width: 800px;">
-                您的浏览器不支持视频播放
-            </video>
-        </div>
-    </div>
+    <!-- 已废弃，直接跳转原始网页，无需弹窗 -->
 
     <!-- 编辑任务模态框 -->
     <div id="editModal" class="modal">
