--- a/flask-m3u8-manager/templates/index.html
+++ b/flask-m3u8-manager/templates/index.html
@@ -227,7 +227,7 @@
     <!-- 已废弃，直接跳转原始网页，无需弹窗 -->
 
     <!-- 编辑任务模态框 -->
-    <div id="editModal" class="modal">
+    <div id="editModal" class="custom-modal">
         <div class="modal-content">
             <span class="close">&times;</span>
             <h3>编辑任务</h3>
@@ -247,7 +247,7 @@
     </div>
 
     <!-- 批量转换进度模态框 -->
-    <div id="batchConvertModal" class="modal batch-convert-modal">
+    <div id="batchConvertModal" class="custom-modal batch-convert-modal">
         <div class="modal-content">
             <span class="close">&times;</span>
             <h3>🔄 批量转换进度</h3>
